--- a/python/docker-compose.yml
+++ b/python/docker-compose.yml
@@ -3,8 +3,9 @@ version: '2'
 services:
   app:
     build: .
+    command: ["php", "./index.php"]
     restart: always
-    container_name: pweb-py
+    container_name: phpcont
     volumes:
       - .:/app
     working_dir: /app
